--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 :root {
   --white: #FFFAE3;
   --lilac: #d29dd7;
-  --dblue: #3F3A73;
+  --brown: #8e3d3d;
   --magenta: #DB3069;
   --beige: #F9DBBD;
   --black: #31171d;
